--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,15 +17,22 @@
     "@typescript-eslint/no-unsafe-return": "error",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
-    "@typescript-eslint/no-unused-vars": ["error", {
-      "argsIgnorePattern": "^_",
-      "varsIgnorePattern": "^_"
-    }],
-    "@typescript-eslint/consistent-type-imports": ["warn", {
-      "prefer": "type-imports"
-    }]
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      {
+        "argsIgnorePattern": "^_",
+        "varsIgnorePattern": "^_"
+      }
+    ],
+    "@typescript-eslint/consistent-type-imports": [
+      "warn",
+      {
+        "prefer": "type-imports"
+      }
+    ]
   },
   "parserOptions": {
     "project": "./tsconfig.json"
-  }
-} 
+  },
+  "ignorePatterns": [".next/*", "node_modules/*"]
+}
